--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <header>
            <h1>MAAST Engineering Pte Ltd</h1>
         <nav>
-            <a href="Index.html"><strong>Home</strong></a>
+            <a href="index.html"><strong>Home</strong></a>
             <a href="services.html">Services</a>
             <a href="projects.html">Projects</a>
             <a href="contact.html">Contact Us</a>
